--- a/docs/csharp/misc/cs1718.md
+++ b/docs/csharp/misc/cs1718.md
@@ -6,26 +6,26 @@ f1_keywords:
 helpviewer_keywords:
 - CS1718
 ms.assetid: 7c1c11fd-4f91-482d-b8f7-efe2a361634e
-ms.openlocfilehash: 7f6f97556e79649f6e844c3d41afbbd60d873bf5
-ms.sourcegitcommit: 99b153b93bf94d0fecf7c7bcecb58ac424dfa47c
+ms.openlocfilehash: debbe75d3464a0b2e08ae088f6ce25648c9f29be
+ms.sourcegitcommit: f87ad41b8e62622da126aa928f7640108c4eff98
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/25/2020
-ms.locfileid: "80249266"
+ms.lasthandoff: 04/07/2020
+ms.locfileid: "80805882"
 ---
-# <a name="compiler-warning-level-3-cs1718"></a><span data-ttu-id="ab446-102">Avviso del compilatore (livello 3) CS1718</span><span class="sxs-lookup"><span data-stu-id="ab446-102">Compiler Warning (level 3) CS1718</span></span>
-<span data-ttu-id="ab446-103">Confronto effettuato con la stessa variabile. Si intendeva confrontare qualcos'altro?</span><span class="sxs-lookup"><span data-stu-id="ab446-103">Comparison made to same variable; did you mean to compare something else?</span></span>  
+# <a name="compiler-warning-level-3-cs1718"></a><span data-ttu-id="440d3-102">Avviso del compilatore (livello 3) CS1718</span><span class="sxs-lookup"><span data-stu-id="440d3-102">Compiler Warning (level 3) CS1718</span></span>
+<span data-ttu-id="440d3-103">Confronto effettuato con la stessa variabile. Si intendeva confrontare qualcos'altro?</span><span class="sxs-lookup"><span data-stu-id="440d3-103">Comparison made to same variable; did you mean to compare something else?</span></span>  
   
- <span data-ttu-id="ab446-104">Per eseguire il confronto con un altro elemento, correggere l'istruzione.</span><span class="sxs-lookup"><span data-stu-id="ab446-104">If you meant to compare to something else, then you should simply correct the statement.</span></span>  
+ <span data-ttu-id="440d3-104">Se si intende confrontare con qualcos'altro, quindi correggere l'istruzione.</span><span class="sxs-lookup"><span data-stu-id="440d3-104">If you meant to compare to something else, then correct the statement.</span></span>  
   
- <span data-ttu-id="ab446-105">Nel caso fosse necessario verificare la restituzione del valore true o false usare istruzioni come `if (a == a) (true)` o `if (a < a) (false)`.</span><span class="sxs-lookup"><span data-stu-id="ab446-105">But another possibility is that you were testing for true or false, and were doing so by statements such as `if (a == a) (true)` or `if (a < a) (false)`.</span></span> <span data-ttu-id="ab446-106">In questo caso, è preferibile scrivere `if (true)` o `if (false)`.</span><span class="sxs-lookup"><span data-stu-id="ab446-106">It is better to simply say `if (true)` or `if (false)`.</span></span> <span data-ttu-id="ab446-107">per due motivi:</span><span class="sxs-lookup"><span data-stu-id="ab446-107">There are two reasons for this:</span></span>  
+ <span data-ttu-id="440d3-105">Nel caso fosse necessario verificare la restituzione del valore true o false usare istruzioni come `if (a == a) (true)` o `if (a < a) (false)`.</span><span class="sxs-lookup"><span data-stu-id="440d3-105">But another possibility is that you were testing for true or false, and were doing so by statements such as `if (a == a) (true)` or `if (a < a) (false)`.</span></span> <span data-ttu-id="440d3-106">È meglio usare `if (true)` `if (false)`o , per i due motivi seguenti:</span><span class="sxs-lookup"><span data-stu-id="440d3-106">It is better to use `if (true)` or `if (false)`, for the following two reasons:</span></span>  
   
-- <span data-ttu-id="ab446-108">È più semplice e conciso.</span><span class="sxs-lookup"><span data-stu-id="ab446-108">It is simpler: it is always clearer to simply say what you mean.</span></span>  
+- <span data-ttu-id="440d3-107">È più semplice e conciso.</span><span class="sxs-lookup"><span data-stu-id="440d3-107">It is simpler: it is always clearer to simply say what you mean.</span></span>  
   
-- <span data-ttu-id="ab446-109">Consente di evitare confusione: una nuova funzionalità di C# 2.0 consiste nei tipi valore `null` , analoghi al valore null usato in T-SQL, il linguaggio di programmazione per SQL Server.</span><span class="sxs-lookup"><span data-stu-id="ab446-109">It helps avoid confusion: a new feature of C# 2.0 is nullable value types, which are analogous to the value `null` in T-SQL, the programming language used by SQL Server.</span></span> <span data-ttu-id="ab446-110">Gli sviluppatori che hanno familiarità con T-SQL potrebbero essere `if (a == a)`preoccupati per l'effetto dei tipi di valore nullable su espressioni quali , a causa dell'utilizzo della logica ternaria in T-SQL.</span><span class="sxs-lookup"><span data-stu-id="ab446-110">Developers familiar with T-SQL might be concerned about the effect of nullable value types on expressions such as `if (a == a)`, because of the use of ternary logic in T-SQL.</span></span> <span data-ttu-id="ab446-111">Usando la parola chiave `true` o `false`, si evitano eventuali fraintendimenti.</span><span class="sxs-lookup"><span data-stu-id="ab446-111">If you use `true` or `false`, you avoid this possible confusion.</span></span>  
+- <span data-ttu-id="440d3-108">Consente di evitare confusione: una nuova funzionalità di C# 2.0 consiste nei tipi valore `null` , analoghi al valore null usato in T-SQL, il linguaggio di programmazione per SQL Server.</span><span class="sxs-lookup"><span data-stu-id="440d3-108">It helps avoid confusion: a new feature of C# 2.0 is nullable value types, which are analogous to the value `null` in T-SQL, the programming language used by SQL Server.</span></span> <span data-ttu-id="440d3-109">Gli sviluppatori che hanno familiarità con T-SQL potrebbero essere `if (a == a)`preoccupati per l'effetto dei tipi di valore nullable su espressioni quali , a causa dell'utilizzo della logica ternaria in T-SQL.</span><span class="sxs-lookup"><span data-stu-id="440d3-109">Developers familiar with T-SQL might be concerned about the effect of nullable value types on expressions such as `if (a == a)`, because of the use of ternary logic in T-SQL.</span></span> <span data-ttu-id="440d3-110">Usando la parola chiave `true` o `false`, si evitano eventuali fraintendimenti.</span><span class="sxs-lookup"><span data-stu-id="440d3-110">If you use `true` or `false`, you avoid this possible confusion.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="ab446-112">Esempio</span><span class="sxs-lookup"><span data-stu-id="ab446-112">Example</span></span>  
- <span data-ttu-id="ab446-113">Il codice seguente genera l'errore CS1718.</span><span class="sxs-lookup"><span data-stu-id="ab446-113">The following code generates warning CS1718.</span></span>  
+## <a name="example"></a><span data-ttu-id="440d3-111">Esempio</span><span class="sxs-lookup"><span data-stu-id="440d3-111">Example</span></span>  
+ <span data-ttu-id="440d3-112">Il codice seguente genera l'errore CS1718.</span><span class="sxs-lookup"><span data-stu-id="440d3-112">The following code generates warning CS1718.</span></span>  
   
 ```csharp  
 // CS1718.cs  
