--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,24 +1,24 @@
 ---
 title: Modifiche di rilievo, dalla versione da 3.1 alla versione 5.0
 description: Elenca le modifiche di rilievo dalla versione 3.1 alla versione 5.0 di .NET, ASP.NET Core ed EF Core.
-ms.date: 03/27/2020
-ms.openlocfilehash: d0bc59c01f2cb849d4c429dcf37c98c5d180ea20
-ms.sourcegitcommit: a9b8945630426a575ab0a332e568edc807666d1b
+ms.date: 04/07/2020
+ms.openlocfilehash: b7ce83276bc4e4f0de1eff08a0dc10fa2588d1dd
+ms.sourcegitcommit: 2b3b2d684259463ddfc76ad680e5e09fdc1984d2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/30/2020
-ms.locfileid: "80391195"
+ms.lasthandoff: 04/08/2020
+ms.locfileid: "80888189"
 ---
-# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="d422c-103">Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0</span><span class="sxs-lookup"><span data-stu-id="d422c-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
+# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="830bf-103">Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0</span><span class="sxs-lookup"><span data-stu-id="830bf-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
 
-<span data-ttu-id="d422c-104">Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Core alla versione 5.0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="d422c-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
+<span data-ttu-id="830bf-104">Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Core alla versione 5.0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="830bf-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
 
-## <a name="aspnet-core"></a><span data-ttu-id="d422c-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="d422c-105">ASP.NET Core</span></span>
+## <a name="aspnet-core"></a><span data-ttu-id="830bf-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="830bf-105">ASP.NET Core</span></span>
 
-- [<span data-ttu-id="d422c-106">Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed</span><span class="sxs-lookup"><span data-stu-id="d422c-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
-- [<span data-ttu-id="d422c-107">SignalR: protocollo Hub MessagePack spostato nel pacchetto MessagePack 2.x</span><span class="sxs-lookup"><span data-stu-id="d422c-107">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
-- [<span data-ttu-id="d422c-108">SignalR: metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="d422c-108">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
-- [<span data-ttu-id="d422c-109">File statici: il tipo di contenuto CSV modificato in standard-compliant</span><span class="sxs-lookup"><span data-stu-id="d422c-109">Static files: CSV content type changed to standards-compliant</span></span>](#static-files-csv-content-type-changed-to-standards-compliant)
+- [<span data-ttu-id="830bf-106">Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed</span><span class="sxs-lookup"><span data-stu-id="830bf-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [<span data-ttu-id="830bf-107">SignalR: protocollo Hub MessagePack spostato nel pacchetto MessagePack 2.x</span><span class="sxs-lookup"><span data-stu-id="830bf-107">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
+- [<span data-ttu-id="830bf-108">SignalR: metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="830bf-108">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
+- [<span data-ttu-id="830bf-109">File statici: il tipo di contenuto CSV modificato in standard-compliant</span><span class="sxs-lookup"><span data-stu-id="830bf-109">Static files: CSV content type changed to standards-compliant</span></span>](#static-files-csv-content-type-changed-to-standards-compliant)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
 
@@ -33,5 +33,21 @@ ms.locfileid: "80391195"
 ***
 
 [!INCLUDE[Static files: CSV content type changed to standards-compliant](~/includes/core-changes/aspnetcore/5.0/static-files-csv-content-type-changed.md)]
+
+***
+
+## <a name="globalization"></a><span data-ttu-id="830bf-110">Globalizzazione</span><span class="sxs-lookup"><span data-stu-id="830bf-110">Globalization</span></span>
+
+- [<span data-ttu-id="830bf-111">StringInfo e TextElementEnumerator sono ora conformi a UAX29</span><span class="sxs-lookup"><span data-stu-id="830bf-111">StringInfo and TextElementEnumerator are now UAX29-compliant</span></span>](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
+
+[!INCLUDE [uax29-compliant-grapheme-enumeration](../../../includes/core-changes/globalization/5.0/uax29-compliant-grapheme-enumeration.md)]
+
+***
+
+## <a name="windows-forms"></a><span data-ttu-id="830bf-112">Windows Form</span><span class="sxs-lookup"><span data-stu-id="830bf-112">Windows Forms</span></span>
+
+- [<span data-ttu-id="830bf-113">API WinForms ora generano ArgumentNullException</span><span class="sxs-lookup"><span data-stu-id="830bf-113">WinForms APIs now throw ArgumentNullException</span></span>](#winforms-apis-now-throw-argumentnullexception)
+
+[!INCLUDE [null-args-cause-argumentnullexception](../../../includes/core-changes/windowsforms/5.0/null-args-cause-argumentnullexception.md)]
 
 ***
