--- a/docs/core/compatibility/2.0-2.1.md
+++ b/docs/core/compatibility/2.0-2.1.md
@@ -2,21 +2,21 @@
 title: Modifiche di rilievo, versione da 2.0 a 2.1
 description: Elenca le modifiche di rilievo dalla versione 2.0 alla versione 2.1 di .NET Core.
 ms.date: 12/17/2019
-ms.openlocfilehash: 97930bf43c70c4d02524feb5b27ebfe3e0cdcc29
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: f150a3218761bec2a81a0d0c32d7b2ee123cbeda
+ms.sourcegitcommit: 348bb052d5cef109a61a3d5253faa5d7167d55ac
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "79147438"
+ms.lasthandoff: 04/22/2020
+ms.locfileid: "82021468"
 ---
-# <a name="breaking-changes-for-migration-from-version-20-to-21"></a><span data-ttu-id="f52f7-103">Modifiche di rilievo per la migrazione dalla versione 2.0 alla versione 2.1Breaking changes for migration from version 2.0 to 2.1</span><span class="sxs-lookup"><span data-stu-id="f52f7-103">Breaking changes for migration from version 2.0 to 2.1</span></span>
+# <a name="breaking-changes-for-migration-from-version-20-to-21"></a><span data-ttu-id="2b96e-103">Modifiche di rilievo per la migrazione dalla versione 2.0 alla versione 2.1Breaking changes for migration from version 2.0 to 2.1</span><span class="sxs-lookup"><span data-stu-id="2b96e-103">Breaking changes for migration from version 2.0 to 2.1</span></span>
 
-<span data-ttu-id="f52f7-104">Se stai eseguendo la migrazione dalla versione 2.0 alla versione 2.1 di .NET Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="f52f7-104">If you're migrating from version 2.0 to version 2.1 of .NET Core, the breaking changes listed in this article may affect your app.</span></span>
+<span data-ttu-id="2b96e-104">Se stai eseguendo la migrazione dalla versione 2.0 alla versione 2.1 di .NET Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="2b96e-104">If you're migrating from version 2.0 to version 2.1 of .NET Core, the breaking changes listed in this article may affect your app.</span></span>
 
-## <a name="corefx"></a><span data-ttu-id="f52f7-105">CoreFx</span><span class="sxs-lookup"><span data-stu-id="f52f7-105">CoreFx</span></span>
+## <a name="core-net-libraries"></a><span data-ttu-id="2b96e-105">Librerie .NET di base</span><span class="sxs-lookup"><span data-stu-id="2b96e-105">Core .NET libraries</span></span>
 
-- [<span data-ttu-id="f52f7-106">Campi privati aggiunti ai tipi struct predefinitiPrivate fields added to built-in struct types</span><span class="sxs-lookup"><span data-stu-id="f52f7-106">Private fields added to built-in struct types</span></span>](#private-fields-added-to-built-in-struct-types)
-- [<span data-ttu-id="f52f7-107">Versioni OpenSSL su macOS</span><span class="sxs-lookup"><span data-stu-id="f52f7-107">OpenSSL versions on macOS</span></span>](#openssl-versions-on-macos)
+- [<span data-ttu-id="2b96e-106">Campi privati aggiunti ai tipi struct predefinitiPrivate fields added to built-in struct types</span><span class="sxs-lookup"><span data-stu-id="2b96e-106">Private fields added to built-in struct types</span></span>](#private-fields-added-to-built-in-struct-types)
+- [<span data-ttu-id="2b96e-107">Versioni OpenSSL su macOS</span><span class="sxs-lookup"><span data-stu-id="2b96e-107">OpenSSL versions on macOS</span></span>](#openssl-versions-on-macos)
 
 [!INCLUDE[Private fields added to built-in struct types](~/includes/core-changes/corefx/2.1/instantiate-struct.md)]
 
