--- a/docs/csharp/misc/cs0243.md
+++ b/docs/csharp/misc/cs0243.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS0243
 ms.assetid: 2506e4cb-dc26-46b4-a58c-ab6bf1601144
-ms.openlocfilehash: da68259ca1531a79f3692da2b29c807cd9598d1a
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 9eb4ad849c1450238a8127e3753bc7423ef85ebc
+ms.sourcegitcommit: 62285ec11fa8e8424bab00511a90760c60e63c95
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69600019"
+ms.lasthandoff: 04/20/2020
+ms.locfileid: "81645508"
 ---
-# <a name="compiler-error-cs0243"></a><span data-ttu-id="bef7b-102">Errore del compilatore CS0243</span><span class="sxs-lookup"><span data-stu-id="bef7b-102">Compiler Error CS0243</span></span>
+# <a name="compiler-error-cs0243"></a><span data-ttu-id="2bb76-102">Errore del compilatore CS0243</span><span class="sxs-lookup"><span data-stu-id="2bb76-102">Compiler error CS0243</span></span>
 
-<span data-ttu-id="bef7b-103">L'attributo Conditional non è valido per 'method' perché è un metodo di override</span><span class="sxs-lookup"><span data-stu-id="bef7b-103">The Conditional attribute is not valid on 'method' because it is an override method</span></span>  
+<span data-ttu-id="2bb76-103">L'attributo Conditional non è valido per 'method' perché è un metodo di override</span><span class="sxs-lookup"><span data-stu-id="2bb76-103">The Conditional attribute is not valid on 'method' because it is an override method</span></span>  
   
- <span data-ttu-id="bef7b-104">L'attributo [Conditional](../programming-guide/concepts/attributes/common-attributes.md#Conditional) non è consentito in un metodo contrassegnato con la parola chiave [override](../language-reference/keywords/override.md) .</span><span class="sxs-lookup"><span data-stu-id="bef7b-104">The [Conditional](../programming-guide/concepts/attributes/common-attributes.md#Conditional) attribute is not allowed on a method that is marked with the [override](../language-reference/keywords/override.md) keyword.</span></span> <span data-ttu-id="bef7b-105">Per ulteriori informazioni, vedere [sapere quando utilizzare le parole chiave override e New](../programming-guide/classes-and-structs/knowing-when-to-use-override-and-new-keywords.md).</span><span class="sxs-lookup"><span data-stu-id="bef7b-105">For more information, see [Knowing When to Use Override and New Keywords](../programming-guide/classes-and-structs/knowing-when-to-use-override-and-new-keywords.md).</span></span>  
+<span data-ttu-id="2bb76-104">L'attributo <xref:System.Diagnostics.ConditionalAttribute> non è consentito in un metodo contrassegnato con la parola chiave [override.](../language-reference/keywords/override.md)</span><span class="sxs-lookup"><span data-stu-id="2bb76-104">The <xref:System.Diagnostics.ConditionalAttribute> attribute is not allowed on a method that is marked with the [override](../language-reference/keywords/override.md) keyword.</span></span> <span data-ttu-id="2bb76-105">Per ulteriori informazioni, vedere [Sapere quando utilizzare le parole chiave Override e New](../programming-guide/classes-and-structs/knowing-when-to-use-override-and-new-keywords.md).</span><span class="sxs-lookup"><span data-stu-id="2bb76-105">For more information, see [Knowing When to Use Override and New Keywords](../programming-guide/classes-and-structs/knowing-when-to-use-override-and-new-keywords.md).</span></span>  
   
- <span data-ttu-id="bef7b-106">Il compilatore non esegue mai l'associazione ai metodi di override; esegue solo l'associazione al metodo di base e Common Language Runtime chiama l'override, come appropriato.</span><span class="sxs-lookup"><span data-stu-id="bef7b-106">The compiler never binds to override methods; it only binds to the base method and the common language runtime calls the override, as appropriate.</span></span>  
+<span data-ttu-id="2bb76-106">Il compilatore non esegue mai l'associazione ai metodi di override.</span><span class="sxs-lookup"><span data-stu-id="2bb76-106">The compiler never binds to override methods.</span></span> <span data-ttu-id="2bb76-107">Viene associato solo al metodo di base e Common Language Runtime chiama l'override, in base alle esigenze.</span><span class="sxs-lookup"><span data-stu-id="2bb76-107">It only binds to the base method, and the common language runtime calls the override, as appropriate.</span></span>  
   
- <span data-ttu-id="bef7b-107">L'esempio seguente genera l'errore CS0243:</span><span class="sxs-lookup"><span data-stu-id="bef7b-107">The following sample generates CS0243:</span></span>  
+<span data-ttu-id="2bb76-108">Il codice seguente genera l'errore CS0243:</span><span class="sxs-lookup"><span data-stu-id="2bb76-108">The following code generates CS0243:</span></span>  
 
 ```csharp
 // CS0243.cs  
