--- a/docs/csharp/misc/cs0612.md
+++ b/docs/csharp/misc/cs0612.md
@@ -6,19 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0612
 ms.assetid: 7695f3b7-ffef-43f7-83db-fc1a9e361f1a
-ms.openlocfilehash: 404e2cc50ccdc528b54ef0b300ad31f876caafad
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: c51dcbedc14ebff01ee13f685b4ce00645f7bfc2
+ms.sourcegitcommit: 62285ec11fa8e8424bab00511a90760c60e63c95
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69610427"
+ms.lasthandoff: 04/20/2020
+ms.locfileid: "81645499"
 ---
-# <a name="compiler-warning-level-1-cs0612"></a><span data-ttu-id="a928e-102">Avviso del compilatore (livello 1) CS0612</span><span class="sxs-lookup"><span data-stu-id="a928e-102">Compiler Warning (level 1) CS0612</span></span>
-<span data-ttu-id="a928e-103">'member' è obsoleto</span><span class="sxs-lookup"><span data-stu-id="a928e-103">'member' is obsolete</span></span>  
+# <a name="compiler-warning-level-1-cs0612"></a><span data-ttu-id="980e6-102">Avviso del compilatore (livello 1) CS0612</span><span class="sxs-lookup"><span data-stu-id="980e6-102">Compiler warning (level 1) CS0612</span></span>
+
+<span data-ttu-id="980e6-103">'member' è obsoleto</span><span class="sxs-lookup"><span data-stu-id="980e6-103">'member' is obsolete</span></span>  
   
- <span data-ttu-id="a928e-104">Progettazione classi ha contrassegnato un membro con l'attributo [Obsolete](../programming-guide/concepts/attributes/common-attributes.md#Obsolete) .</span><span class="sxs-lookup"><span data-stu-id="a928e-104">The class designer marked a member with the [Obsolete](../programming-guide/concepts/attributes/common-attributes.md#Obsolete) attribute.</span></span> <span data-ttu-id="a928e-105">Ciò significa che il membro potrebbe non essere supportato in una versione futura della classe.</span><span class="sxs-lookup"><span data-stu-id="a928e-105">This means that the member might not be supported in a future version of the class.</span></span>  
+ <span data-ttu-id="980e6-104">La finestra di progettazione della classe ha contrassegnato un membro con [l'attributo Obsolete](../language-reference/attributes/general.md#obsolete-attribute).</span><span class="sxs-lookup"><span data-stu-id="980e6-104">The class designer marked a member with the [Obsolete attribute](../language-reference/attributes/general.md#obsolete-attribute).</span></span> <span data-ttu-id="980e6-105">Ciò significa che il membro potrebbe non essere supportato in una versione futura della classe.</span><span class="sxs-lookup"><span data-stu-id="980e6-105">This means that the member might not be supported in a future version of the class.</span></span>  
   
- <span data-ttu-id="a928e-106">L'esempio seguente illustra come accedere a un membro obsoleto che genera l'errore CS0612:</span><span class="sxs-lookup"><span data-stu-id="a928e-106">The following sample shows how accessing an obsolete member generates CS0612:</span></span>  
+ <span data-ttu-id="980e6-106">L'esempio seguente illustra come accedere a un membro obsoleto che genera l'errore CS0612:</span><span class="sxs-lookup"><span data-stu-id="980e6-106">The following sample shows how accessing an obsolete member generates CS0612:</span></span>  
   
 ```csharp  
 // CS0612.cs  
